exports[`Object search reducer creates SEARCH_OBJECTS_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "page": Object {
      "page": 1,
      "perPage": 50
    },
    "type": "musit/objectSearch/SEARCH"
  },
  Object {
    "page": Object {
      "page": 1,
      "perPage": 50
    },
    "result": Object {
      "matches": Array [
        Object {
          "id": 51,
          "museumNo": "MusN11",
          "term": "Solsikke"
        }
      ],
      "totalMatches": 1
    },
    "type": "musit/objectSearch/SEARCH_SUCCESS"
  }
]
`;

exports[`Object search reducer search objects: fail action 1`] = `
Object {
  "data": Array [],
  "error": [Error: search objects has some error.],
  "loaded": false,
  "loading": false,
  "params": Object {
    "currentPage": 1,
    "perPage": 50
  }
}
`;

exports[`Object search reducer search objects: initial action 1`] = `
Object {
  "data": Object {
    "matches": Array [],
    "totalMatches": 0
  },
  "loaded": false,
  "loading": true,
  "params": Object {
    "currentPage": undefined,
    "perPage": 50
  }
}
`;

exports[`Object search reducer search objects: no action 1`] = `
Object {
  "data": Object {
    "matches": Array [],
    "totalMatches": 0
  },
  "params": Object {
    "currentPage": 1,
    "perPage": 50
  }
}
`;

exports[`Object search reducer search objects: success action 1`] = `
Object {
  "data": Object {
    "matches": Array [
      MusitObject {
        "breadcrumb": Array [
          Object {
            "id": 1,
            "name": "root-node",
            "url": "/magasin/1"
          },
          Object {
            "id": 2,
            "name": "Utviklingsmuseet",
            "url": "/magasin/2"
          },
          Object {
            "id": 3,
            "name": "Forskningens hus",
            "url": "/magasin/3"
          },
          Object {
            "id": 4,
            "name": "Kulturværelset",
            "url": "/magasin/4"
          },
          Object {
            "id": 5,
            "name": "Naturværelset",
            "url": "/magasin/5"
          }
        ],
        "currentLocationId": 5,
        "id": 51,
        "mainObjectId": undefined,
        "museumNo": "MusN11",
        "pathNames": Array [
          Object {
            "name": "root-node",
            "nodeId": 1
          },
          Object {
            "name": "Utviklingsmuseet",
            "nodeId": 2
          },
          Object {
            "name": "Forskningens hus",
            "nodeId": 3
          },
          Object {
            "name": "Kulturværelset",
            "nodeId": 4
          },
          Object {
            "name": "Naturværelset",
            "nodeId": 5
          }
        ],
        "subNo": undefined,
        "term": "Solsikke"
      },
      MusitObject {
        "breadcrumb": Array [],
        "currentLocationId": undefined,
        "id": 54,
        "mainObjectId": undefined,
        "museumNo": "MusN13",
        "pathNames": undefined,
        "subNo": undefined,
        "term": "Makrellsopp"
      },
      MusitObject {
        "breadcrumb": Array [],
        "currentLocationId": undefined,
        "id": 19,
        "mainObjectId": undefined,
        "museumNo": "MusN20",
        "pathNames": undefined,
        "subNo": undefined,
        "term": "Ukjent mygg"
      },
      MusitObject {
        "breadcrumb": Array [],
        "currentLocationId": undefined,
        "id": 17,
        "mainObjectId": undefined,
        "museumNo": "MusN21",
        "pathNames": undefined,
        "subNo": "2",
        "term": "Snilebille"
      },
      MusitObject {
        "breadcrumb": Array [],
        "currentLocationId": undefined,
        "id": 18,
        "mainObjectId": undefined,
        "museumNo": "MusN22",
        "pathNames": undefined,
        "subNo": undefined,
        "term": "Fluesopp"
      },
      MusitObject {
        "breadcrumb": Array [],
        "currentLocationId": undefined,
        "id": 14,
        "mainObjectId": undefined,
        "museumNo": "MusK23",
        "pathNames": undefined,
        "subNo": undefined,
        "term": "Lite skaft av ben"
      },
      MusitObject {
        "breadcrumb": Array [],
        "currentLocationId": undefined,
        "id": 15,
        "mainObjectId": undefined,
        "museumNo": "MusK24",
        "pathNames": undefined,
        "subNo": "a",
        "term": "Lendeklede"
      },
      MusitObject {
        "breadcrumb": Array [],
        "currentLocationId": undefined,
        "id": 16,
        "mainObjectId": undefined,
        "museumNo": "MusK24",
        "pathNames": undefined,
        "subNo": "b",
        "term": "Kokekar"
      },
      MusitObject {
        "breadcrumb": Array [
          Object {
            "id": 1,
            "name": "root-node",
            "url": "/magasin/1"
          },
          Object {
            "id": 2,
            "name": "Utviklingsmuseet",
            "url": "/magasin/2"
          },
          Object {
            "id": 3,
            "name": "Forskningens hus",
            "url": "/magasin/3"
          },
          Object {
            "id": 4,
            "name": "Kulturværelset",
            "url": "/magasin/4"
          },
          Object {
            "id": 5,
            "name": "Naturværelset",
            "url": "/magasin/5"
          }
        ],
        "currentLocationId": 5,
        "id": 9,
        "mainObjectId": undefined,
        "museumNo": "MusN28",
        "pathNames": Array [
          Object {
            "name": "root-node",
            "nodeId": 1
          },
          Object {
            "name": "Utviklingsmuseet",
            "nodeId": 2
          },
          Object {
            "name": "Forskningens hus",
            "nodeId": 3
          },
          Object {
            "name": "Kulturværelset",
            "nodeId": 4
          },
          Object {
            "name": "Naturværelset",
            "nodeId": 5
          }
        ],
        "subNo": undefined,
        "term": "Tusenben"
      }
    ],
    "totalMatches": 55
  },
  "loaded": true,
  "loading": false,
  "params": Object {
    "currentPage": 1,
    "perPage": 50
  }
}
`;
